added sidebar and navbar logic

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL="postgresql://neondb_owner:X5dcIWLN8bFf@ep-orange-river-a1p4lylc.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW50ZW5zZS1tYW1tYWwtNjYuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_uAgobglthjgsiMr7wNv3AUJwbNo5RhmwRmcHBkwycI
